--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,17 +5,18 @@ compatibility_date = "2024-01-01"
 # D1 Database binding
 [[d1_databases]]
 binding = "DB"
-database_name = "cfblog-db"
-database_id = "your-database-id-here"
+database_name = "blog-db"
+database_id = "fe0d4cc1-f071-4531-8ceb-c76605605518"
 
 # R2 Storage binding
 [[r2_buckets]]
 binding = "MEDIA"
 bucket_name = "cfblog-media"
 
+# Workers AI binding
+[ai]
+binding = "AI"
+
 # Environment variables
 [vars]
 JWT_SECRET = "your-jwt-secret-here-change-in-production"
-ADMIN_EMAIL = "admin@example.com"
-SITE_NAME = "My Blog"
-SITE_URL = "http://localhost:8787"
